# humanoid_ros

ros_workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_workspace/install/arm_pkg/lib/arm_pkg/: arm_control_node
ros_workspace/install/arm_pkg/share/arm_pkg/: package.sh  package.xml
ros_workspace/install/camera_pkg/lib/camera_pkg/: bottle_recog_node
ros_workspace/install/camera_pkg/share/camera_pkg/: package.sh
ros_workspace/install/interfaces/include/interfaces/msg/: bottle_info.hpp  robot_status.hpp
ros_workspace/install/interfaces/share/interfaces/: local_setup.sh  package.sh
ros_workspace/install/mic_pkg/lib/mic_pkg/: mic_node
ros_workspace/install/mic_pkg/share/mic_pkg/: package.dsv  package.sh  package.xml
ros_workspace/install/motion_control_pkg/lib/motion_control_pkg/: arm_control_node
ros_workspace/install/motion_control_pkg/share/motion_control_pkg/: package.bash  package.sh  package.zsh
ros_workspace/log/: latest_build  latest_list
ros_workspace/src/camera_pkg/: setup.py
ros_workspace/src/camera_pkg/camera_pkg/: bottle_recog_node.py
ros_workspace/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_workspace/src/install/arm_pkg/share/arm_pkg/: package.sh
ros_workspace/src/interfaces/: CMakeLists.txt
ros_workspace/src/log/: latest_build
ros_workspace/src/mic_pkg/: setup.cfg  setup.py
ros_workspace/src/motion_control_pkg/: setup.cfg  setup.py
ros_workspace/src/motion_control_pkg/motion_control_pkg/: arm_control_node.py
(+32 files in other folders)
