<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mic_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="henrik@todo.todo">henrik</maintainer>
  <license>TODO: License declaration</license>

  <!-- Existing dependency -->
  <depend>rclpy</depend>

  <!-- Add std_msgs for standard message types -->
  <depend>std_msgs</depend>

  <!-- Dependencies for message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>builtin_interfaces</depend> <!-- Commonly used for time and other basic message types -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
